--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/node-fetch": "^2.5.8",
     "jest": "^26.6.3",
     "terser": "^5.6.0",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
