--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc && terser dist/index.js -c -m --toplevel -o dist/index.min.js --source-map \"url='index.min.js.map', content='./dist/index.js.map'\" && terser dist/browser.js -c -m -o dist/browser.min.js --source-map \"url='browser.min.js.map', content='./dist/browser.js.map'\"",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint \"src/**\""
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,13 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "terser": "^5.6.0",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
