Updated my wesite link

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": {
     "name": "James Simon",
     "email": "jsmon.dev@gmail.com",
-    "url": "https://jsmon.vercel.app/"
+    "url": "https://jsmon.dev/"
   },
   "license": "MIT",
   "bugs": {
