Updated lint script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc && terser dist/index.js -c -m --toplevel -o dist/index.min.js --source-map \"url='index.min.js.map', content='./dist/index.js.map'\" && terser dist/browser.js -c -m -o dist/browser.min.js --source-map \"url='browser.min.js.map', content='./dist/browser.js.map'\" && terser dist/cli.js -c -m --toplevel -o dist/cli.min.js --source-map \"url='cli.min.js.map', content='./dist/cli.js.map'\"",
     "test": "jest",
     "prepublishOnly": "npm run build",
-    "lint": "eslint \"src/**\""
+    "lint": "eslint \"src/**\" && eslint \"__tests__/**\""
   },
   "repository": {
     "type": "git",
